--- a/crm-frontend/index.html
+++ b/crm-frontend/index.html
@@ -68,7 +68,7 @@
       <div class="form__add_contacts-wrapper">
         <button class="form__add_contact js-btn-add-contact">Добавить контакт</button>
       </div>
-      <button class="form__submit js-submit-btn" type="submit"><svg class="btn-loading-svg"><use xlink:href="#circle"></use></svg> Сохранить</button>
+      <button class="form__submit js-submit-btn"><svg class="btn-loading-svg"><use xlink:href="#circle"></use></svg> Сохранить</button>
       <button class="form__cancel js-close-modal">Отмена</button>
     </form>
   </div>
