--- a/crm-frontend/index.html
+++ b/crm-frontend/index.html
@@ -68,7 +68,7 @@
       <div class="form__add_contacts-wrapper">
         <button class="form__add_contact js-btn-add-contact">Добавить контакт</button>
       </div>
-      <button class="form__submit js-submit-btn"><svg class="btn-loading-svg"><use xlink:href="#circle"></use></svg> Сохранить</button>
+      <button class="form__submit js-submit-btn" type="submit"><svg class="btn-loading-svg"><use xlink:href="#circle"></use></svg> Сохранить</button>
       <button class="form__cancel js-close-modal">Отмена</button>
     </form>
   </div>
@@ -95,10 +95,10 @@
   <div class="modal js-modal-delete-client">
     <form class="form modal__form form__delete_modal js-form-delete">
       <h3 class="form__subtitle js-subtitle">Удалить клиента</h3>
-      <button class="form__close_btn form__close__delete js-close-modal"></button>
+      <button class="form__close_btn form__close__delete js-close-modal" type="button"></button>
       <div class="form__question">Вы действительно хотите удалить данного клиента?</div>
       <button class="form__submit js-submit-btn" type="submit"><svg class="btn-loading-svg"><use xlink:href="#circle"></use></svg> Удалить</button>
-      <button class="form__cancel js-close-modal">Отмена</button>
+      <button class="form__cancel js-close-modal" type="button">Отмена</button>
     </form>
   </div>
 </body>
